Update [1]컴퓨터 내부의 언어 체계.md

--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -1,19 +1,56 @@
 # 1. 컴퓨터 내부의 언어 체계
 
 ## 언어란 무엇인가
-<strong>컴퓨터 언어</strong>를 포함한 모든 언어의 뜻은 기호의 집합으로 인코딩(encoding)된다. <br>
-이를 설명하기 위해 언어를 세 가지 구성요소로 나눌 수 있다. <br>
-<br>
+**컴퓨터 언어**를 포함한 모든 언어의 뜻은 기호의 집합으로 인코딩(encoding)된다.<br>
+이를 설명하기 위해 언어를 세 가지 구성요소로 나눌 수 있다:
 - 기호가 들어갈 상자
 - 상자에 들어갈 기호
 - 상자의 순서
-<br>
 
-### 비트
-비유된 상자는 자연어에서 <strong>문자(character)</strong>라고 부르고 컴퓨터 언어에선 <strong>비트(bit)</strong>라고 부른다. <br>
->'비트'라는 단어는 2진법을 사용한다는 뜻의 '바이너리(binary)'와 10진수를 뜻하는 'digit'이 기묘하게 합쳐진 말이다.<br>
 
-컴퓨터 언어에서 사용하는 '비트'라는 상자 안에는 2진법의 기호가 들어가는데, 일반적으로 0/1, 꺼짐/켜짐, 참/거짓이 들어간다.<br>
+## 비트
+비유된 상자는 자연어에서 **문자(character)**, 컴퓨터 언어에서는 **비트(bit)**를 뜻한다.  
+> '비트'는 2진법을 뜻하는 '바이너리(binary)'와 숫자를 의미하는 'digit'의 결합어
 
-### 논리 연산
+컴퓨터 언어에서 비트는 [1/0], [켜짐/꺼짐], [참/거짓] 같은 2진법의 기호를 담는 상자 역할을 한다.
+
+## 논리 연산
+논리 연산은 하나 이상의 입력값을 논리적으로 결합해 결과를 도출하는 연산이다. <br>
+예를 들어, "배가 고픈가"가 참이고 "다이어트 중인가"가 거짓일 때 "밥을 먹는다"가 참이 되는 조건문이 논리 연산의 예다.
+
+### 불리언 대수
+조지 불(George Boole)은 비트 연산 규칙의 집합인 **불리언 대수(Boolean algebra)**를 정의했다.<br>
+기본 연산자는 **NOT, AND, OR**이고, 추가로 **XOR**도 자주 사용된다. 또한 일반 대수와 마찬가지로 결합 법칙, 교환 법칙, 분배 법칙을 불리언 대수에 적용할 수 있다.
+
+- **NOT**: 입력값을 뒤집는다.
+- **AND**: 모든 입력값이 참일 때만 결과가 참이다.
+- **OR**: 하나라도 참이면 결과가 참이다.
+- **XOR**: 입력값이 다를 때 참이다. 세 비트 이상에서도 참의 개수가 홀수면 참이다.
+
+
+<img width="697" alt="image" src="https://github.com/user-attachments/assets/23a1972e-5799-4ec5-95d4-f6622ec4f978" />
+
+> 불리언 연산 진리표(truth table). TRUE는 1로, FALSE는 0으로 대응된다
+
+### 드모르간의 법칙
+오거스터스 드모르간(Augustus De Morgan)은 불리언 대수에 적용할 수 있는 **드모르간의 법칙(De Morgan's law)을 새로 발견했다.<br>
+이 법칙은 다음 두 가지 식으로 표현된다:
+1. NOT (A AND B) = NOT A OR NOT B
+2. NOT (A OR B) = NOT A AND NOT B
+<img width="765" alt="image" src="https://github.com/user-attachments/assets/8dd4b8f4-4fdb-4db2-9af6-5d3f4a0bb90e" />
+
+드모르간의 법칙을 통해, NOT 연산을 사용할 경우 AND연산과 OR연산이 서로 대체 가능함을 알 수 있다.
+
+### 정수를 비트로 표현하는 방법
+
+#### 양의 정수 표현
+10진수(decimal number) 체계에서는 값을 10의 거듭제곱으로 표현한다. 이를 밑(base)이 10이라고 한다.  
+<img width="365" alt="image" src="https://github.com/user-attachments/assets/1ced2c3c-bf96-4f2c-acf4-42f926e69bcb" />
+
+2진수(binary number)는 0과 1 두 가지 숫자만 사용해서 숫자를 표현하는 방법이다.<br>
+각 자릿수는 오른쪽에서 왼쪽으로 이동하며 2의 제곱을 의미한다.<br>
+각 자릿수의 값을 더하면 10진수(decimal) 숫자와 동일한 값을 얻을 수 있다.
+<img width="493" alt="image" src="https://github.com/user-attachments/assets/13c65dc0-e7a3-427a-bbee-6d25dde131bb" />
+
+
 
