Update [1]컴퓨터 내부의 언어 체계.md

--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -51,9 +51,29 @@
 각 자릿수는 오른쪽에서 왼쪽으로 이동하며 2의 제곱을 의미한다.<br>
 각 자릿수의 값을 더하면 10진수(decimal) 숫자와 동일한 값을 얻을 수 있다.
 
-<img width="493" alt="image" src="https://github.com/user-attachments/assets/13c65dc0-e7a3-427a-bbee-6d25dde131bb" />
+<img width="498" alt="image" src="https://github.com/user-attachments/assets/5e3c2deb-293d-464e-8016-b97c7b575fae" />
 
-5028(2) = 1 × 2^12 + 0 × 2^11 + 1 × 2^10 + 0 × 2^9 + 0 × 2^8 + 1 × 2^7 + 1 × 2^6 + 0 × 2^5 + 0 × 2^4 + 1 × 2^3 + 0 × 2^2 + 0 × 2^1 + 0 × 2^0  <br>
-= 4096 + 1024 + 128 + 64 + 8  <br>
-= 5320(10)
 
+$$
+1001110100100_{(2)} = 1 \cdot 2^{12} + 0 \cdot 2^{11} + 0 \cdot 2^{10} + 1 \cdot 2^9 + 1 \cdot 2^8 + 1 \cdot 2^7 + 0 \cdot 2^6 + 0 \cdot 2^5 + 1 \cdot 2^4 + 0 \cdot 2^3 + 0 \cdot 2^2 + 1 \cdot 2^1 + 0 \cdot 2^0
+$$
+
+$$
+= 4096 + 0 + 0 + 512 + 256 + 128 + 0 + 0 + 16 + 0 + 0 + 2 + 0
+$$
+
+$$
+= 5028_{(10)}
+$$
+
++ 2진수에서 가장 오른쪽의 비트를 가장 작은 유효 비트(Least significant bit; LSB)라고 하고, 가장 왼쪽의 비트를 가장 큰 유효 비트(Most significant bit; MSB)라고 한다.
+
+#### 2진수 덧셈
+
+10진 덧셈과 동일하게 2진수에서도 각 비트를 LSB에서 MSB 쪽으로 더하며 결과가 1보다 크면 1을 다음 자리로 옮긴다.<br>
+
+1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2) = 6(10)이 된다.
+
+<img width="426" alt="스크린샷 2024-12-26 오후 9 47 27" src="https://github.com/user-attachments/assets/26992324-5e26-4a22-b292-830aa25c6f0a" />
+
+> 이는 컴퓨터 하드웨어가 2진수 덧셈을 수행할 때는 AND 연산과 XOR 연산은 사용한다.
