--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -9,7 +9,7 @@
 
 
 ## 비트
-비유된 상자는 자연어에서 **문자(character)**, 컴퓨터 언어에서는 **비트(bit)**를 뜻한다.  
+비유된 상자는 자연어에서 **문자(character)**, 컴퓨터 언어에서는 **비트(bit)** 를 뜻한다.  
 > '비트'는 2진법을 뜻하는 '바이너리(binary)'와 숫자를 의미하는 'digit'의 결합어
 
 컴퓨터 언어에서 비트는 [1/0], [켜짐/꺼짐], [참/거짓] 같은 2진법의 기호를 담는 상자 역할을 한다.
@@ -33,11 +33,14 @@
 > 불리언 연산 진리표(truth table). TRUE는 1로, FALSE는 0으로 대응된다
 
 ### 드모르간의 법칙
-오거스터스 드모르간(Augustus De Morgan)은 불리언 대수에 적용할 수 있는 **드모르간의 법칙(De Morgan's law)을 새로 발견했다.<br>
+오거스터스 드모르간(Augustus De Morgan)은 불리언 대수에 적용할 수 있는 **드모르간의 법칙** (De Morgan's law)을 새로 발견했다.<br>
 이 법칙은 다음 두 가지 식으로 표현된다:
 1. NOT (A AND B) = NOT A OR NOT B
 2. NOT (A OR B) = NOT A AND NOT B
 <img width="765" alt="image" src="https://github.com/user-attachments/assets/8dd4b8f4-4fdb-4db2-9af6-5d3f4a0bb90e" />
+
+<img width="279" alt="image" src="https://github.com/user-attachments/assets/1e822b68-a826-465c-b3d0-6c22dbb4c3a3" />
+
 
 드모르간의 법칙을 통해, NOT 연산을 사용할 경우 AND연산과 OR연산이 서로 대체 가능함을 알 수 있다.
 
