[1]컴퓨터 내부의 언어 체계

--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -69,14 +69,45 @@ $$
 = 5028_{(10)}
 $$
 
-+ 2진수에서 가장 오른쪽의 비트를 가장 작은 유효 비트(Least significant bit; LSB)라고 하고, 가장 왼쪽의 비트를 가장 큰 유효 비트(Most significant bit; MSB)라고 한다.
++ 2진수에서 가장 오른쪽의 비트를 가장 작은 유효 비트(Least significant bit; **LSB**)라고 하고,<br> 가장 왼쪽의 비트를 가장 큰 유효 비트(Most significant bit; **MSB**)라고 한다.
 
 #### 2진수 덧셈
 
 10진 덧셈과 동일하게 2진수에서도 각 비트를 LSB에서 MSB 쪽으로 더하며 결과가 1보다 크면 1을 다음 자리로 옮긴다.<br>
 
-1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2) = 6(10)이 된다.
+ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2) = 6(10)이 된다.
 
 <img width="426" alt="스크린샷 2024-12-26 오후 9 47 27" src="https://github.com/user-attachments/assets/26992324-5e26-4a22-b292-830aa25c6f0a" />
 
-> 이는 컴퓨터 하드웨어가 2진수 덧셈을 수행할 때는 AND 연산과 XOR 연산은 사용한다.
+> 컴퓨터 하드웨어가 2진수 덧셈을 수행할 때는 AND 연산과 XOR 연산을 사용한다.
+
+그러나 덧셈 결과가 사용할 비트의 개수로 표현될 수 있는 범위를 벗어나면 어떻게 될까?  
+이 경우 MSB에서 올림이 발생하게 되며, 이를 **오버플로(overflow)** 라고 한다.
+
+#### 예시: 4비트 덧셈에서 오버플로
+4비트 연산에서 \(1001_2\) + \(1000_2\)를 계산한다고 가정해보자.  
+- \(1001_2 = 9_{10}\), \(1000_2 = 8_{10}\)  
+- 이 둘을 더하면 실제 결과는 \(10001_2 = 17_{10}\)이 되어야 한다.  
+
+하지만, **4비트의 범위(0~15, 즉 \(0000_2\) ~ \(1111_2\))**를 벗어나기 때문에 MSB 왼쪽에 추가된 비트를 저장할 공간이 없어, 결과가 **0001**이 된다.  
+즉, \(17_{10}\)이 아닌 \(1_{10}\)로 계산된다.
+
+#### 오버플로 감지
+컴퓨터는 이러한 오버플로를 감지하기 위해 **조건 코드 레지스터(Condition Code Register)** 를 사용한다.  
+이 레지스터는 연산 중 발생한 특정 조건(예: 오버플로, 캐리 발생, 부호 변화 등)을 나타내는 **오버플로 비트** 를 포함한다. 이를 통해 프로그램은 오버플로를 감지하고 적절한 처리를 할 수 있다.
+
+#### 음수 표현
+2진수에선 뺄셈을 표현하기 위해 새로운 회로를 규정하지 않는다. 대신, 양수와 음수를 나타내는 비트를 MSB에 놓아 부호(sign)처럼 사용하기로 했다.(0은 양수, 1은 음수)<br>
+
+음수를 표현 하기 위해 세가지 방법이 있는데 순서대로 알아보자.
+
+1. Signed-magnitude(부호화 크기 표현법)
+   - 음수를 표현하기 위해 MSB를 반전시켜 부호를 나타내고, 나머지 비트는 값의 크기를 그대로 유지.
+   - 단점 : 0 중복 표현 문제, XOR과 AND를 통한 덧셈 계산 불가
+2. One's complement(1의 보수)
+   - 음수를 표현하기 위해 모든 비트를 반전 시킴. 덧셈 시 MSB에서 발생한 올림(carry)을 LSB로 전달하는 순환올림(end-around carry)을 추가로 수행.
+   - 단점 : 0 중복 표현 문제, 덧셈 과정이 복잡(순환 올림 계산 추가 수행)
+3. Two's complement(2의 보수)
+   - 음수를 표현하기 위해 모든 비트를 반전 시킨 후 LSB에 1을 더함. MSB에 캐리 발생시 이 값은 버림
+   - 0 중복 표현 문제가 없고, 덧셈이 자연스럽게 됨
+   - 현대 컴퓨터의 표준 방식
