Update [1]컴퓨터 내부의 언어 체계.md

--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -101,6 +101,8 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
 
 음수를 표현 하기 위해 세가지 방법이 있는데 순서대로 알아보자.
 
+<img width="962" alt="image" src="https://github.com/user-attachments/assets/84561dd3-30cc-4b7c-b74a-9ac827ebabf7" />
+
 1. Signed-magnitude(부호화 크기 표현법)
    - 음수를 표현하기 위해 MSB를 반전시켜 부호를 나타내고, 나머지 비트는 값의 크기를 그대로 유지.
    - 단점 : 0 중복 표현 문제, XOR과 AND를 통한 덧셈 계산 불가
