--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -1,6 +1,6 @@
 # 1. 컴퓨터 내부의 언어 체계
 
-## 언어란 무엇인가
+## 1-1. 언어란 무엇인가
 **컴퓨터 언어**를 포함한 모든 언어의 뜻은 기호의 집합으로 인코딩(encoding)된다.<br>
 이를 설명하기 위해 언어를 세 가지 구성요소로 나눌 수 있다:
 - 기호가 들어갈 상자
@@ -44,7 +44,7 @@
 
 드모르간의 법칙을 통해, NOT 연산을 사용할 경우 AND연산과 OR연산이 서로 대체 가능함을 알 수 있다.
 
-### 정수를 비트로 표현하는 방법
+## 1-2. 정수를 비트로 표현하는 방법
 
 #### 양의 정수 표현
 10진수(decimal number) 체계에서는 값을 10의 거듭제곱으로 표현한다. 이를 밑(base)이 10이라고 한다.  
@@ -113,3 +113,5 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
    - 음수를 표현하기 위해 모든 비트를 반전 시킨 후 LSB에 1을 더함. MSB에 캐리 발생시 이 값은 버림
    - 0 중복 표현 문제가 없고, 덧셈이 자연스럽게 됨
    - 현대 컴퓨터의 표준 방식
+
+## 1-3. 실수를 비트로 표현하는 방법
