--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -41,6 +41,7 @@
 
 <img width="279" alt="image" src="https://github.com/user-attachments/assets/1e822b68-a826-465c-b3d0-6c22dbb4c3a3" />
 
+> 논리학, 집합론, 전자회로에서 사용되는 드모르간의 법칙
 
 드모르간의 법칙을 통해, NOT 연산을 사용할 경우 AND연산과 OR연산이 서로 대체 가능함을 알 수 있다.
 
@@ -114,4 +115,7 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
    - 0 중복 표현 문제가 없고, 덧셈이 자연스럽게 됨
    - 현대 컴퓨터의 표준 방식
 
+> 11이라는 2비트 이진수는 표현 방식에 따라 값이 달라진다.<br>
+> Unsigned-magnitude일 경우 3, Signed-magnitude(2의 보수)일 경우 -1로 해석된다.  
+따라서, 정확한 해석을 위해 표현 방식에 대한 추가 정보가 필요하다.
 ## 1-3. 실수를 비트로 표현하는 방법
