--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -115,7 +115,37 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
    - 0 중복 표현 문제가 없고, 덧셈이 자연스럽게 됨
    - 현대 컴퓨터의 표준 방식
 
-> 11이라는 2비트 이진수는 표현 방식에 따라 값이 달라진다.<br>
+#image
+> 2의 보수의 장점 및 이유는 위 사진을 통해 한눈에 확인할 수 있다.
+> 1. **뺄셈을 덧셈으로 완벽히 대체 가능**  
+>    - 2의 보수는 음수를 표현하는 방식이기 때문에, 뺄셈을 덧셈으로 변환할 수 있어 연산 회로를 단순화할 수 있음.  
+>    - 예: `A - B`는 `A + (-B)`로 계산 가능.
+> 2. **0이 하나밖에 없다**  
+>    - 2의 보수에서는 `+0`과 `-0`이 동일하게 표현되므로, 0이 하나만 존재함.  
+>    - 이로 인해 논리 회로 설계가 단순해지고, 트랜지스터를 중복으로 구성할 필요가 없음.  
+>    - 결과적으로 시간과 비용 절약 가능.  
+> 3. **추가적인 덧셈이 필요 없다**  
+>    - 1의 보수 방식에서는 연산 후에 추가로 carry(자리 올림)를 처리해야 하지만, 2의 보수 방식에서는 이런 과정이 필요 없음.  
+>    - 이는 연산 효율성을 높임.
+>
+> 4. **더 넓은 범위의 수 표현 가능**  
+>    - 동일한 비트 수로 더 큰 범위의 음수와 양수를 표현 가능.  
+>    - 예: 4비트로 표현할 경우  
+>      - 2의 보수: -8 ~ +7  
+>      - 부호-크기 방식: -7 ~ +7  
+>
+> 5. **부호 확장이 가능**  
+>    - 2의 보수는 비트 확장 시 MSB(가장 왼쪽 비트, 부호 비트)를 그대로 복사하면 값이 유지됨.  
+>    - 예를 들어, 4비트에서 `-3`(2의 보수로 `1101`)을 8비트로 확장하면, MSB를 복사해서 `1111 1101`로 표현 가능.  
+>    - 부호 확장을 통해 연산 결과를 다른 비트 수에서도 일관되게 유지 가능.
+
+
+> `11`이라는 2비트 이진수는 표현 방식에 따라 값이 달라진다.<br>
 > Unsigned-magnitude일 경우 3, Signed-magnitude(2의 보수)일 경우 -1로 해석된다.  
 따라서, 정확한 해석을 위해 표현 방식에 대한 추가 정보가 필요하다.
+
 ## 1-3. 실수를 비트로 표현하는 방법
+
+실수를 표현하는 방법은 크게 두가지로 나뉜다.
+
+### 1-3-1. 고정소수점 표현법
