Update [1]컴퓨터 내부의 언어 체계.md

--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -115,7 +115,8 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
    - 0 중복 표현 문제가 없고, 덧셈이 자연스럽게 됨
    - 현대 컴퓨터의 표준 방식
 
-#image
+<img width="722" alt="image" src="https://github.com/user-attachments/assets/3c63edfe-5792-419f-a921-d00356999c9f" />
+
 > 2의 보수의 장점 및 이유는 위 사진을 통해 한눈에 확인할 수 있다.
 > 1. **뺄셈을 덧셈으로 완벽히 대체 가능**  
 >    - 2의 보수는 음수를 표현하는 방식이기 때문에, 뺄셈을 덧셈으로 변환할 수 있어 연산 회로를 단순화할 수 있음.  
