--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -149,3 +149,12 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
 실수를 표현하는 방법은 크게 두가지로 나뉜다.
 
 ### 1-3-1. 고정소수점 표현법
+
+2진 소수점의 위치를 임의로 정한다.
+예를 들어, 4비트 수 2진수에선 정수 부분 2비트, 분수 부분 2비트로 나눈다.
+
+![alt text](image/fixed-point-truth-table.png)
+
+접근 방법은 기존 2진수를 구하는 과정과 똑같지만, 쓸모 있는 범위의 실수값을 표현하기 위해 필요한 비트 수가 너무 많다는 문제점이 있어 범용 컴퓨터에선 이런 방식을 사용하지 않는다.
+
+### 1-3-2. 부동소수점 표현법
