--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -151,11 +151,100 @@ ex) 1은 2진수로 001이고, 5는 2진수로 101이다. 이를 합하면 110(2
 
 ### 1-3-1. 고정소수점 표현법
 
-2진 소수점의 위치를 임의로 정한다.
+2진 소수점의 위치를 임의로 정한다.<br>
 예를 들어, 4비트 수 2진수에선 정수 부분 2비트, 분수 부분 2비트로 나눈다.
 
 ![alt text](image/fixed-point-truth-table.png)
 
 접근 방법은 기존 2진수를 구하는 과정과 똑같지만, 쓸모 있는 범위의 실수값을 표현하기 위해 필요한 비트 수가 너무 많다는 문제점이 있어 범용 컴퓨터에선 이런 방식을 사용하지 않는다.
+
+#### 고정소수점 방식에서 2진수 정수 및 소수 부분 계산
+
+<br>
+
+2진수 고정소수점 표현에서 **정수 부분**과 **소수 부분**을 구하는 과정은 각각 다음과 같이 진행된다.<br><br>
+
+**1. 정수 부분 계산**  
+정수 값을 **2로 나누고 나머지를 기록**하여, **LSB(최하위 비트)**부터 **MSB(최상위 비트)** 순으로 나열.
+
+예: \( 6_{10} \)의 정수 부분을 이진수로 변환<br>
+
+$$
+6 \div 2 = 3 \quad \text{(나머지 0)}
+$$
+$$
+3 \div 2 = 1 \quad \text{(나머지 1)}
+$$
+$$
+1 \div 2 = 0 \quad \text{(나머지 1)}
+$$
+
+따라서, \( 6_{10} = 110_{2} \)이다.<br><br>
+
+**2. 소수 부분 계산**  
+소수 값을 **2로 곱하고 정수 부분을 기록**하여, **MSB부터 LSB 방향**으로 나열.
+
+예: \( 0.7_{10} \)의 소수 부분을 이진수로 변환<br>
+
+$$
+0.7 \times 2 = 1.4 \quad \text{(정수 부분 1)}
+$$
+$$
+0.4 \times 2 = 0.8 \quad \text{(정수 부분 0)}
+$$
+$$
+0.8 \times 2 = 1.6 \quad \text{(정수 부분 1)}
+$$
+$$
+0.6 \times 2 = 1.2 \quad \text{(정수 부분 1)}
+$$
+$$
+0.2 \times 2 = 0.4 \quad \text{(정수 부분 0)}
+$$
+
+이를 반복하면 \( 0.7_{10} = 0.1(0110)..._2 \)로 표현되며, **무한 비트가 필요**한 값임을 알 수 있다.<br><br>
+
+
+따라서, 6.7_{10} 을 고정소수점 이진수로 표현하면 다음과 같이 된다.
+
+![alt text](image/convert-6.7-to-binary.png)
+
+이는 정수 부분에서 밑이 되는  `2^0`, `2^1` 의 값을 2로 나누고, 소수 부분에서 밑이 되는  `2^{-1}`, `2^{-2}` 의 값을 2로 곱하며 각 자리 값을 순서대로 구하는 과정이다.
+
+<details>
+<summary>이러한 고정소수점 계산법은 10진수 계산에서도 동일하게 확인할 수 있다</summary>
+<br>
+
+고정소수점 계산 방식은 10진수에서도 동일하게 적용할 수 있음<br>
+
+예: \( 21.28_{10} \)을 10진수 고정소수점 방식으로 표현한다.<br>
+
+- **정수 부분 (21) 계산**  
+  10으로 계속 나누어 몫이 0이 될 때까지 나머지를 기록하고, LSB부터 MSB 순으로 나열한다.
+
+  $$
+  21 \div 10 = 2 \quad \text{... 나머지 } 1
+  $$
+  $$
+  2 \div 10 = 0 \quad \text{... 나머지 } 2
+  $$
+
+  따라서, 정수 부분은 \( 21 \)이 된다.<br><br>
+
+- **소수 부분 (0.28) 계산**  
+  10을 계속 곱하면서 정수 부분을 추출하고, MSB부터 LSB 순으로 나열한다.
+
+  $$
+  0.28 \times 10 = 2.8 \quad \text{(정수 부분 2)}
+  $$
+  $$
+  0.8 \times 10 = 8 \quad \text{(정수 부분 8)}
+  $$
+
+  따라서, 소수 부분은 \( 0.28 \)이 된다.<br><br>
+
+결과적으로 \( 21.28_{10} \)은 고정소수점 방식에서 정수와 소수를 각각 **정수부: 21, 소수부: 28**로 표현할 수 있다.
+
+</details>
 
 ### 1-3-2. 부동소수점 표현법
