--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -248,3 +248,9 @@ $$
 </details>
 
 ### 1-3-2. 부동소수점 표현법
+
+부동소수점은 소수점을 자유롭게 이동시켜서 수를 표현하는 방식으로, 아주 크거나 아주 작은 수를 효과적으로 표현할 수 있다. IEEE 754 표준이 널리 사용된다.
+
+부동소수점은 다음과 같이 세 부분으로 이루어짐.
+
+부동소수점 = 부호(sign) + 지수(exponent) + 가수(mantissa or significand)
