--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -251,6 +251,27 @@ $$
 
 부동소수점은 소수점을 자유롭게 이동시켜서 수를 표현하는 방식으로, 아주 크거나 아주 작은 수를 효과적으로 표현할 수 있다. IEEE 754 표준이 널리 사용된다.
 
-부동소수점은 다음과 같이 세 부분으로 이루어짐.
+부동소수점은 다음과 같이 세 부분으로 이루어진다.
 
 부동소수점 = 부호(sign) + 지수(exponent) + 가수(mantissa or significand)
+
+예를 들어 3.74라는 수를 이진수로 변환한다고 쳐보자,
+$$
+3.74_{10} \approx 11.101111_{2}
+$$
+
+3.74는 대략 11.101111로 표현된다.
+
+$$
+11.101111_{2} = 1.1101111 \times 2^1
+$$
+
+여기서, 실제 유효 숫자를 담당하는 `11101111` 부분을 가수라고 하고,
+소수점의 위치를 결정하는 값을 지수라고 한다.
+
+
+가수는 실제 수의 유효숫자를 표현하는 수를 말한다.
+항상 `1.xxxx...` 형태로 표현되는데, 제일 첫 숫자는 항상 1이기 때문에 주로 제일 첫번째 1을 생략한다.
+
+지수는 소수점의 위치를 결정하는 값으로, 수의 크기를 나타낸다.
+
