--- a/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
+++ b/[CS]한 권으로 읽는 컴퓨터 구조와 프로그래밍/[1]컴퓨터 내부의 언어 체계.md
@@ -260,13 +260,15 @@ $$
 3.74_{10} \approx 11.101111_{2}
 $$
 
-3.74는 대략 11.101111로 표현된다.
+3.74를 이진수로 바꾸면 대략 11.101111로 표현할 수 있다.
 
 $$
 11.101111_{2} = 1.1101111 \times 2^1
 $$
 
-여기서, 실제 유효 숫자를 담당하는 `11101111` 부분을 가수라고 하고,
+>10진수에서 소수점을 왼쪽으로 옮길 때 10을 곱하는 것처럼 2진수에선 2를 곱해 왼쪽으로 옮긺
+
+여기서, 실제 유효 숫자를 담당하는 `1.1101111` 부분을 가수라고 하고,
 소수점의 위치를 결정하는 값을 지수라고 한다.
 
 
@@ -275,3 +277,8 @@ $$
 
 지수는 소수점의 위치를 결정하는 값으로, 수의 크기를 나타낸다.
 
+또한 IEEE 754 방식에선 NaN과 같은 특별한 값도 나타낼 수 있다.
+
+## 1-4. 2진 코드화한 10진수 시스템
+
+2진 코드화한 10진수(BCD, Binary-coded decimal)
